syntax="proto3";

package LessonRepository;

option go_package = "github.com/nivida/vv-hackathon/go/proto/LessonRepository";

import "proto/assignmentRepository.proto";
import "proto/shared/bool.proto";

message Filter {
    string author = 1;
    string user = 2;
    string lesson = 3;
}

message Lesson {
    string id = 1;
    string start = 2;
    string end = 3;
    string author = 4;
    repeated AssignmentRepository.Assignment assignments = 5;
}

message LessonAssignment {
    string lesson = 1;
    string assignment = 2;
}

service LessonRepository {
    rpc GetLessons(Filter) returns (Lesson);
    rpc CreateLesson(Lesson) returns (Lesson);
    rpc DeleteLesson(Lesson) returns (Bool.Bool);
    rpc AddAssignment(LessonAssignment) returns (Bool.Bool);
    rpc DeleteAssignment(LessonAssignment) returns (Bool.Bool);
    rpc GetAssignments(Filter) returns (AssignmentRepository.Assignment);
}
